# real-time-korean-stt

./: .gitignore  README.md  requirements.txt
models/: config.json
src/: llm_module.py  stt_module.py
src/rkllm_cpp_wrapper/: CMakeLists.txt  rkllm_inference.cpp
